fix: add stretch to button group but not full width

--- a/packages/components-css/src/action-group/index.scss
+++ b/packages/components-css/src/action-group/index.scss
@@ -6,6 +6,7 @@
     --utrecht-button-max-inline-size: none;
 
     align-items: stretch;
+    max-inline-size: fit-content;
   }
 
   @media (width <= 768px) {
